--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Financial Dream Calculator</title>
     <style>
+        #boosterLink{
+            padding-bottom: 20px;
+        }
         body {
             font-family: 'Arial', sans-serif;
             padding: 20px;
