--- a/booster.html
+++ b/booster.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Your Dream</title>
     <style>
+        #boostResult{
+            margin-bottom: 10px;
+        }
         body {
             font-family: 'Arial', sans-serif;
             padding: 20px;
