--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Financial Dream Calculator</title>
     <style>
+        #boosterLink{
+            padding-bottom: 20px;
+        }
         body {
             font-family: 'Arial', sans-serif;
             padding: 20px;
@@ -70,6 +73,7 @@
     <div class="error" id="errorMsg"></div>
     <div class="result fade-in" id="result"></div>
     <div class="booster-link fade-in" id="boosterLink"></div>
+    <div>That's just a simulation, real life results may differ.</div>
     <footer>© 2024 DreamDone. All rights reserved.</footer>
     <script>
         function calculateDream() {
